<?xml version="1.0"?>
<package format="3">
  <name>armor_detector</name>
  <version>0.0.0</version>
  <description>Armor detection using OpenCV and ROS 2</description>

  <maintainer email="wu@todo.todo">wu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>eigen3_cmake_module</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
